[package]
name = "cube"
description = "Spinning cube animcation for the console"
categories = ["games", "command-line-utilities"]
license = "MIT"
keywords = ["spinning", "cube", "animation"]
repository = "https://github.com/conqp/cube"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
rand = "0.9.0-alpha.1"
